# PortfolioManagerAPI-Python

./: .dockerignore  .env.docker  .env.example  .gitignore  Architecture Notes & Design Rationale.md  CLAUDE.md  Dockerfile  README.md  SECURITY_CHECK.md  coverage.xml  docker-compose.dev.yml  docker-compose.yml  docker-start.ps1  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_server.py  simple_test.py  test_chat.py  test_chat_api.py  test_db_connection.py  test_db_quick.py  test_docker_streaming.py  test_streaming.py
.claude/: settings.json
.claude/agents/: langgraph-agent-specialist.md  portfolio-coder.md  portfolio-db.md  portfolio-debugger.md  portfolio-orchestrator.md  portfolio-planner.md  portfolio-prompt-engineer.md  portfolio-qa.md  portfolio-reviewer.md
.claude/commands/: add-service.md  add-tool.md
.github/: copilot-instructions.md
.github/agents/: langgraph-agent-specialist.agent.md  portfolio-coder.agent.md  portfolio-db.agent.md  portfolio-debugger.agent.md  portfolio-orchestrator.agent.md  portfolio-planner.agent.md  portfolio-prompt-engineer.agent.md  portfolio-qa.agent.md  portfolio-reviewer.agent.md
docs/: PHASE1_COMPLETE.md  PRICING_CALCULATION_SERVICE.md
migrations/: 001_langgraph_checkpointer_tables.sql  002_checkpoint_blobs_table.sql  003_add_blob_to_checkpoint_writes.sql  004_add_task_path_to_checkpoint_writes.sql  005_add_watches_tables.sql
src/api/: main.py
src/api/routes/: chat.py  holdings.py  instruments.py  watches.py
src/core/: ai_config.py  auth.py  config.py  constants.py  telemetry.py
src/db/: session.py
src/db/models/: __init__.py  account.py  conversation_thread.py  exchange_rate.py  holding.py  instrument.py  platform.py  portfolio.py  watch.py
src/jobs/: __init__.py  run_due_watches.py
src/repositories/: account_repository.py  base.py  holding_repository.py
src/schemas/: holding.py  voice.py  watch.py
src/services/: conversation_thread_service.py  currency_conversion_service.py  eod_market_data_service.py  eod_market_data_tool.py  holding_service.py  metrics_service.py  pricing_calculation_service.py  result_objects.py  tavily_service.py  watch_service.py
src/services/ai/: README.md  __init__.py  agent_prompt_service.py  ai_chat_service.py  azure_foundry_chat_service.py  langgraph_agent_service.py  phase2_demo.py  portfolio_analysis_service.py  voice_adapter.py
tests/: README.md  __init__.py  conftest.py
tests/api/: __init__.py
tests/integration/: __init__.py
(+20 files in other folders)
